# my-bot

./: .env.example  .gitignore  .secrets  Containerfile  README.md  main.py  push_mybot.sh  pyproject.toml  restart.sh  safe-git.sh
..bfg-report/2025-10-27/15-02-53/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
..bfg-report/2025-10-27/15-02-54/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
..bfg-report/2025-10-27/15-02-54/protected-dirt/: 077b4f0a-HEAD.csv
.github/workflows/: build.yml
k8s/: deployment.yaml  values.yaml
k8s/kyverno/: values.yaml
kyverno-policies/: required-labels.yaml
src/: config.py  handlers.py  main.py  parser.py  run.py  scheduler.py  session.py  utils.py
tests/: test_basic.py  test_bot.py  test_parser_mock.py
