[project]
name = "my-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "lxml>=6.0.0",
    "pyrogram>=2.0.106",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "tgcrypto>=1.2.5",
    "telebot>=0.0.5",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.9",
    "pytelegrambotapi>=4.29.1",
    "pillow>=12.0.0",
    "pillow-heif>=1.1.1",
    "telegram>=0.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "ruff>=0.12.11",
    "pytest>=8.4.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pip-audit>=2.9.0",
]




# [project]
# name = "my-bot"
# version = "0.1.0"
# description = "Add your description here"
# readme = "README.md"
# requires-python = ">=3.13"
# dependencies = [
#     "beautifulsoup4>=4.13.4",
#     "black>=25.1.0",
#     "flask>=3.1.2",
#     "gunicorn>=23.0.0",
#     "lxml>=6.0.0",
#     "pyrogram>=2.0.106",
#     "pytest>=8.4.1",
#     "python-dotenv>=1.1.1",
#     "requests>=2.32.4",
#     "ruff>=0.12.11",
#     "tgcrypto>=1.2.5",
#     "telebot>=0.0.5",
#     "pydantic-settings>=2.10.1",
#     "pydantic>=2.11.9",
#     "pytelegrambotapi>=4.29.1",
# ]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [project.optional-dependencies]
# dev = [
#     "black>=23.1.0",
#     "ruff>=0.0.300",
#     "black>=25.1.0",
# ]


# [tool.hatch.build.targets.wheel]
# packages = ["my_bot"]
